--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 /* Import Google Font */
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
-/* CSS Reset - Piccalilli Modern CSS Reset */
+/* ------------------- */
+/* Reset               */
+/* ------------------- */
+
+/* https://piccalil.li/blog/a-modern-css-reset/ */
+
 *,
 *::before,
 *::after {
@@ -10,9 +15,16 @@
   padding: 0;
 }
 
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"],
+li {
+  list-style: none;
+}
+
 html,
 body {
-  height: 100%;
+  height: 100vh;
   font-family: 'Ubuntu', sans-serif;
   scroll-behavior: smooth;
 }
@@ -68,27 +80,42 @@ body {
   justify-content: center;
   align-items: center;
   padding: 20px;
+  min-height: 100vh;
+}
+
+.content_wrapper {
+  display: flex;
+  background-color: var();
+  /* flex-direction: row; */
+  width: 100%;
+  /* height: 100vh; */
 }
 
 /* Sidebar styling */
 .sidebar {
+  display: flex;
+  flex-direction: column;
+  /* flex: 1; */
+  width: 100%;
+  height: 100%;
   background-color: var(--White);
   padding: 20px;
-  margin-right: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 /* Sidebar list styling */
 .sidebar_lists {
   background: url(/assets/images/bg-sidebar-desktop.svg);
-  list-style-type: none;
-  padding: 0;
+  width: 100%;
 }
 
 .sidebar_lists li {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 2rem;
   margin-bottom: 15px;
   padding: 10px;
+  color: var(--Magnolia);
   border: 1px solid var(--Cool-gray);
   border-radius: 5px;
   cursor: pointer;
@@ -101,12 +128,12 @@ body {
 
 /* Form wrapper styling */
 .forms_wrapper {
+  display: flex;
+  /* flex: 3; */
   background-color: var(--White);
   padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 100%;
-  max-width: 600px;
+  /* max-width: 600px; */
 }
 
 /* Button styling */
